--- a/vrest_test_automation/vrest_test_automation.tex
+++ b/vrest_test_automation/vrest_test_automation.tex
@@ -1,9 +1,10 @@
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 \usetheme{Warsaw}
 \title[Automated API Testing using vREST]{Automated API Testing using vREST}
-\author{vREST @ Optimizory}
-%\institute{Optimizory Technologies Pvt. Ltd.}
+\author{Pankaj Jangid}
+\institute{Optimizory Technologies Pvt. Ltd.}
 \date{\today}
 \begin{document}
 
@@ -11,9 +12,84 @@
 \titlepage
 \end{frame}
 
+%\AtBeginSubsection[]
+%{
+%    \begin{frame}<beamer>
+%        \frametitle{Layout}
+%        \tableofcontents[currentsection, currentsubsection]
+%    \end{frame}
+%}
 
-\begin{frame}{Introduction}
-This is a short introduction to Beamer class.
+\section{Writing Tests}
+\begin{frame}{``Test Cases'' Tab}
+    \includegraphics[scale=0.30]{images/test_cases_tab.PNG}
 \end{frame}
-
+\begin{frame}{Writing Test Case}
+    \includegraphics[scale=0.30]{images/new_test_case_button.PNG}
+\end{frame}
+\begin{frame}{Writing Test Case (Contd.)}
+    \includegraphics[scale=0.30]{images/add_test_case_modal.PNG}
+\end{frame}
+\begin{frame}{Click the Test Case for its Details}
+    \includegraphics[scale=0.30]{images/click_test_case.PNG}
+\end{frame}
+\begin{frame}{View or Edit Test Case Details}
+    \includegraphics[scale=0.30]{images/test_case_details.PNG}
+\end{frame}
+\begin{frame}{Set Request Parameters}
+    \includegraphics[scale=0.30]{images/test_case_parameters.PNG}
+\end{frame}
+\begin{frame}{Expected Result}
+    \includegraphics[scale=0.30]{images/expected_result.PNG}
+\end{frame}
+\begin{frame}{List of Test Cases}
+    \includegraphics[scale=0.30]{images/list_of_test_cases.PNG}
+\end{frame}
+\section{Executing Tests and Analyzing Results}
+\begin{frame}{Run Tests}
+    \includegraphics[scale=0.30]{images/run_tests.PNG}
+\end{frame}
+\begin{frame}{Running Tests}
+    \includegraphics[scale=0.30]{images/running_tests.PNG}
+\end{frame}
+\begin{frame}{Running Selected Tests}
+    \includegraphics[scale=0.30]{images/running_selected_tests.PNG}
+\end{frame}
+\begin{frame}{View Diff on the Results Screen}
+    \includegraphics[scale=0.30]{images/test_results_diff.PNG}
+\end{frame}
+\begin{frame}{Filter on Test Runs}
+    \includegraphics[scale=0.30]{images/filter_on_test_runs.PNG}
+\end{frame}
+\begin{frame}{Other Filters}
+    \includegraphics[scale=0.30]{images/filter_on_pass_fail.PNG}
+\end{frame}
+\begin{frame}{``Results'' Tab}
+    \includegraphics[scale=0.30]{images/actual_result.PNG}
+\end{frame}
+\begin{frame}{``Diff'' Tab}
+    \includegraphics[scale=0.30]{images/view_diff_after_filter.PNG}
+\end{frame}
+\section{Advanced Configuration}
+\begin{frame}{Default Validator}
+    \includegraphics[scale=0.30]{images/default_validator.PNG}
+\end{frame}
+\begin{frame}{Create Validators}
+    \includegraphics[scale=0.30]{images/create_validators.PNG}
+\end{frame}
+\begin{frame}{More Info...}
+    \begin{itemize}
+        \item Read vREST Guide -- \href{http://vrest.io/guide}{http://vrest.io/guide}
+        \item vREST Application -- \href{http://vrest.io/}{http://vrest.io/}
+        \item Sign Up -- \href{http://vrest.io/signup}{http://vrest.io/signup}
+    \end{itemize}
+\end{frame}
+\begin{frame}[plain,c]
+    \begin{center}
+        \huge Thank You! 
+    \end{center}
+    \begin{center}
+        \small pankaj.jangid@gmail.com
+    \end{center}
+\end{frame}
 \end{document}
