removed header footer from title slide

--- a/vrest_test_automation/vrest_test_automation.tex
+++ b/vrest_test_automation/vrest_test_automation.tex
@@ -8,7 +8,7 @@
 \date{\today}
 \begin{document}
 
-\begin{frame}
+\begin{frame}[plain,c]
 \titlepage
 \end{frame}
 
@@ -70,6 +70,7 @@
 \begin{frame}{``Diff'' Tab}
     \includegraphics[scale=0.30]{images/view_diff_after_filter.PNG}
 \end{frame}
+
 \section{Advanced Configuration}
 \begin{frame}{Default Validator}
     \includegraphics[scale=0.30]{images/default_validator.PNG}
@@ -77,6 +78,8 @@
 \begin{frame}{Create Validators}
     \includegraphics[scale=0.30]{images/create_validators.PNG}
 \end{frame}
+
+\section{References}
 \begin{frame}{More Info...}
     \begin{itemize}
         \item Read vREST Guide -- \href{http://vrest.io/guide}{http://vrest.io/guide}
